Fixed width of chart and chart container to align with other elements in different screen widths.

--- a/src/components/simulation/simulation.scss
+++ b/src/components/simulation/simulation.scss
@@ -8,9 +8,16 @@ $primary-background-color: #fff;
   background-color: $primary-background-color;
   margin-top: 20px;
   margin-right: 20px;
-  margin-left: -30px;
   border-radius: 1px;
   padding-top: 45px;
   padding-bottom: 35px;
   height: 705px;
+
+  @media only screen and (min-width: 991px) {
+    margin-left: -20px;
+  }
+
+  @media only screen and (max-width: 990px) {
+    margin-left: 20px;
+  }
 }
